# git-patchdance

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  mkdocs.yml  pyproject.toml
.github/workflows/: test.yml
docs/: api-reference.md  architecture.md  development.md  git-integration.md  index.md  technical-spec.md  ui-design.md
src/: main.rs
src/git_patchdance/: __init__.py  cli.py  demo.py
src/git_patchdance/core/: __init__.py  errors.py  events.py  exceptions.py  models.py  services.py
src/git_patchdance/git/: __init__.py  fake_repository.py  gitpython_repository.py  repository.py  service.py
src/git_patchdance/tui/: __init__.py  app.py
tests/: __init__.py  conftest.py
tests/integration/: test_tui_integration.py
tests/unit/: test_create_commit.py  test_demo.py  test_models.py  test_tui_app.py  test_tui_basic.py  test_tui_clean.py  test_tui_simplified.py  test_tui_widgets.py  test_tui_widgets_with_apps.py
