[package]
name = "git-patchdance"
version = "0.1.0"
edition = "2021"
authors = ["Ronny Pfannschmidt <ronny@improveit.com>"]
description = "Interactive terminal and GUI tool for git patch management"
license = "MIT"
repository = "https://github.com/RonnyPfannschmidt/git-patchdance"
keywords = ["git", "patch", "tui", "gui", "interactive"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }

# Git integration
git2 = "0.18"

# Terminal UI
ratatui = "0.24"
crossterm = "0.27"

# GUI (optional feature)
egui = { version = "0.24", optional = true }
eframe = { version = "0.24", optional = true }

# Async utilities
futures = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

[features]
default = ["tui"]
tui = []
gui = ["egui", "eframe"]

[[bin]]
name = "git-patchdance"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"